UNRELEASED CHANGES:

* Add the ability to indicate how you've met someone
* Replace former front-end build system by mix (which is the new default with Laravel 5.5)
* Add a first part of the API
* Fix the access to upgrade account view
* Add security.txt file
* Upgrade codebase to Laravel 5.5

RELEASED VERSIONS:

v0.7.1 - 2017-10-21
-------------------

* Fix an error in the JS that broke the application

v0.7.0 - 2017-10-21
-------------------

* Add ability to assign a single activity to multiple people
* Improve german translations
* Fix reminders not being sent in case of wrong timezones
* Fix the access to upgrade account view
* Replace the custom RandomHelper by str_random
* Multiple small fixes

v0.6.5 - 2017-08-28
-------------------

* Add a new welcome screen for new users
* Fix typo when displaying message of no existing contact to link when adding a child
* Monicahq.com only: add limitations to free accounts

v0.6.4 - 2017-08-23
-------------------

* Add restriction of 50 characters for a first name, and 100 characters for a last name
* Add support for storing uploaded files on s3
* Sort contacts by first name, last name when linking significant others and kids
* Remove automatic uppercase of the first name
* Remove beginning / ending spaces in names when adding / saving a contact
* Fix birthday reminder creation bug on vCard import
* Fix search bar being hard to use

v0.6.3 - 2017-08-16
-------------------

* Fix kids not being able to be removed
* Fix some CSRF potential vulnerabilities

v0.6.2 - 2017-08-16
-------------------

* Add support for Markdown for the notes and call logs

v0.6.1 - 2017-08-15
-------------------

* Fix delete account bug
* Fix kid deletion bug
* Fix gift creation

v0.6.0 - 2017-08-14
-------------------

* Add ability to set significant other and kids as contact.
* Add Italian translation
* Add debt total below a contacts debt
* Add world currencies
* Add German translation

v0.5.0 - 2017-07-24
-------------------
