@@ -28,7 +28,9 @@ return [
     'people_add_firstname' => 'First name',
     'people_add_middlename' => 'Middle name (Optional)',
     'people_add_lastname' => 'Last name (Optional)',
-    'people_add_cta' => 'Add this person',
+    'people_add_cta' => 'Add',
+    'people_save_and_add_another_cta' => 'Submit and add someone else',
+    'people_add_success' => ':name has been successfully created',
     'people_add_gender' => 'Gender',
     'people_delete_success' => 'The contact has been deleted',
     'people_delete_message' => 'If you need to delete this contact,',
