@@ -28,7 +28,9 @@ return [
     'people_add_firstname' => 'Prénom',
     'people_add_middlename' => 'Surnom (optionnel)',
     'people_add_lastname' => 'Nom de famille (optionnel)',
-    'people_add_cta' => 'Ajouter cette personne',
+    'people_add_cta' => 'Ajouter',
+    'people_save_and_add_another_cta' => 'Submit and add someone else',
+    'people_add_success' => ':name has been successfully created',
     'people_add_gender' => 'Sexe',
     'people_delete_success' => 'Le contact a été supprimé',
     'people_delete_message' => 'Si vous devez supprimer ce contact,',
